force-app/main/default/objects/Case/fields/Box_DocGen_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_DocGen_Batch_Id__c</fullName>
    <label>Box Doc Gen Batch Id</label>
    <description>Opaque Box Doc Gen batch identifier accepted for this Case's request. Contains no request content.</description>
    <inlineHelpText>Set by the intake Flow after Box accepts the Doc Gen submission.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>