force-app/main/default/objects/Case/fields/Box_DocGen_Output_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_DocGen_Output_File_Id__c</fullName>
    <label>Box Doc Gen Output File Id</label>
    <description>Opaque Box file identifier for the generated PDF, set only after the manual status refresh confirms completion. Contains no request content.</description>
    <inlineHelpText>Set by the manual Check Document Status Flow once Box reports the output file.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>