force-app/main/default/objects/Case/fields/HR_Intake_Managed_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>HR_Intake_Managed_Provisioning__c</fullName>
    <label>HR Intake Managed Provisioning</label>
    <description>True when this Case's Box folder was provisioned synchronously by the HR intake Flow, so competing automatic folder-provisioning automation excludes it.</description>
    <inlineHelpText>Set by the intake Flow when the Case shell is created. Do not edit manually.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>