force-app/main/default/objects/Case/fields/HR_Integration_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>HR_Integration_Error_Code__c</fullName>
    <label>HR Integration Error Code</label>
    <description>Allow-listed, non-sensitive error code from the intake or status-refresh Apex actions. Never a raw exception message or Box response body.</description>
    <inlineHelpText>Set by the intake or status-refresh Flows from the sanitized errorCode returned by Apex.</inlineHelpText>
    <length>40</length>
    <type>Text</type>
</CustomField>