force-app/main/default/objects/Case/fields/HR_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>HR_Integration_Status__c</fullName>
    <label>HR Integration Status</label>
    <description>Non-sensitive orchestration status for the HR intake/Doc Gen workflow. Never derived from or containing request field values.</description>
    <inlineHelpText>Set by the intake and status-refresh Flows only.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Created</fullName>
                <default>true</default>
                <label>Case Created</label>
            </value>
            <value>
                <fullName>Doc Gen Submitted</fullName>
            </value>
            <value>
                <fullName>Doc Gen Processing</fullName>
            </value>
            <value>
                <fullName>Document Generated</fullName>
            </value>
            <value>
                <fullName>Folder Failed</fullName>
            </value>
            <value>
                <fullName>Doc Gen Submit Failed</fullName>
            </value>
            <value>
                <fullName>Submission Unknown</fullName>
            </value>
            <value>
                <fullName>Doc Gen Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>