force-app/main/default/objects/Case/fields/HR_Request_Schema_Key__c.field-meta.xml
<CustomField>
    <fullName>HR_Request_Schema_Key__c</fullName>
    <label>HR Request Schema Key</label>
    <description>Non-sensitive contract key (e.g. newHire) used for this HR intake request. Audit pointer only; never contains request data.</description>
    <inlineHelpText>Set by the intake Flow from a fixed schema constant. Do not populate from user input.</inlineHelpText>
    <length>40</length>
    <type>Text</type>
</CustomField>