force-app/main/default/objects/Case/fields/HR_Request_Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>HR_Request_Schema_Version__c</fullName>
    <label>HR Request Schema Version</label>
    <description>Exact schema version (e.g. 1.0) selected at Case creation. Audit pointer only; never contains request data.</description>
    <inlineHelpText>Set by the intake Flow from a fixed schema constant. Do not populate from user input.</inlineHelpText>
    <length>10</length>
    <type>Text</type>
</CustomField>